<?xml version="1.0"?>
<package format="3">
  <name>dsp</name>
  <version>0.0.1</version>
  <description>A package for D*-lite planning on a 3D occupancy grid or 2D traversability map.</description>

  <maintainer email="samkar@ltu.se">matt</maintainer>


  <license>MPL</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>eigen</build_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>dsp_interfaces</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>dsp_interfaces</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>octomap</exec_depend>

   <member_of_group>rosidl_interface_packages</member_of_group>
 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
